--- a/content/themes/elements/sass/modules/content/_section.scss
+++ b/content/themes/elements/sass/modules/content/_section.scss
@@ -12,6 +12,7 @@ section{
 
   .section-header{
     max-width: 700px;
+    margin: auto;
     margin-bottom: $space-section / 2;
   }
 }
